Working implementation. Small UI changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ option(JUCE_BUILD_EXAMPLES "Build JUCE Examples" OFF)
 #Fetching JUCE from git
 #IF you want to instead point it to a local version, you can invoke CMake with
 #-DCPM_JUCE_SOURCE="Path_To_JUCE"
-CPMAddPackage("gh:juce-framework/JUCE#master")
+CPMAddPackage("gh:juce-framework/JUCE#juce7")
 #CPMAddPackage("gh:Chowdhury-DSP/chowdsp_utils#master")
 
 add_subdirectory(Source)
